--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "@vitejs/plugin-react": "^4.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.0.0"
+    "tailwindcss": "^3.4.10",
+  "postcss": "^8.4.47",
+  "autoprefixer": "^10.4.19"
   }
 }
