--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "@types/react-dom": "^18.2.0",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.0.0",
-    "tailwindcss": "^3.4.10",
-    "postcss": "^8.4.47",
-    "autoprefixer": "^10.4.19"
+    "vite": "^5.0.0"
   }
 }
